--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,6 +1,10 @@
 spring:
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
   datasource:
-    url: jdbc:h2:tcp://localhost/~/h2-db/hong-tabulator
+    url: jdbc:h2:~/h2-db/hong-tabulator
     username: sa
     password: 1234
     driver-class-name: org.h2.Driver
