commit19 : ckEditor 이미지 저장 경로 변경

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -20,7 +20,7 @@ logging.level:
 
 hong:
   img:
-    path: 'D:\hongTabulatorFile\'
+    path: 'D:\hongFileDir\hongTabulatorFile\'
   ckImg:
     pattern: '/ckImage/**'
-    path: 'D:/hongTabulatorFile/ckImage/'
+    path: 'D:/hongFileDir/hongTabulatorFile/ckImage/'
